--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.hackathon.ReleaseTimelineAnalyzerApplication</mainClass>
+                                    <mainClass>com.hackathon.ReleaseTimelineAnalyzerApplication</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
